--- a/main.html
+++ b/main.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <title>Bootstrap Card Example</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="container mt-4">
+        <div class="card-deck">
+            <!-- First Card -->
+            <div class="card">
+                <div class="card-header">
+                    Welcome to Sync5
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">New Features</h5>
+                    <p class="card-text">Mobile and Tablet support</p>
+                    <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+                    <a href="#" class="btn btn-primary">Read more</a>
+                </div>
+            </div>
+            <!-- Second Card -->
+            <div class="card">
+                <div class="card-header bg-danger text-white">
+                    Alert
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Node Dead</h5>
+                    <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+                </div>
+            </div>
+        </div>
+        <!-- Third Card -->
+        <div class="card mt-4">
+            <img class="card-img-top" src="https://via.placeholder.com/800x400" alt="Underwater">
+            <div class="card-body">
+                <h5 class="card-title">President under Pressure</h5>
+                <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+                <p class="card-text"><small class="text-muted">Last updated 12 mins ago</small></p>
+            </div>
+        </div>
+    </div>
 </body>
-
 </html>
