--- a/main.html
+++ b/main.html
@@ -24,8 +24,8 @@
                 </div>
             </div>
             <!-- Second Card -->
-            <div class="card">
-                <div class="card-header bg-danger text-white">
+            <div class="card bg-danger">
+                <div class="card-header text-white">
                     Alert
                 </div>
                 <div class="card-body">
